# H4I-HipFFT

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_hipfft.sh  build_mklshim.sh  hipfft.cpp  hipfft_test.cpp  run_it.sh
.github/workflows/: install.yml  presubmit.yml
CMake/: HipFFTConfig.cmake.in  HipFFTVersion.cmake
Scripts/: install-hipfft-header.sh
cmake/: hipfft-config.cmake.in
include/: hipfft-export.h  hipfft-version.h  hipfft.h  hipfftHandle.h
include/hipfft/: hipfft-export.h  hipfft-version.h.in
mklshim_files/: CMakeLists.txt  build_mklshim.sh  onemklfft.cpp  onemklfft.h  setUpModules.sh  types.h
mklshim_files/include/h4i/mklshim/: onemklfft.h
mklshim_files/src/: CMakeLists.txt  onemklfft.cpp
samples/: CMakeLists.txt  fft_basic_test.cpp
src/: CMakeLists.txt  Makefile  build.sh  hipfft.cpp
tests/: CMakeLists.txt  Makefile  Makefile_Flags  Makefile_Rules  build_all.sh  check_all.sh  clean_all.sh  edit_all.sh  hipfft_test.x  interactive_run_all.sh  list_of_tests  run_it.sh  setUpModules.sh
tests/cmake-consumer/: CMakeLists.txt  consumer.cpp
tests/hipfft_1d/: Makefile  build.sh  hipfft_1d.cpp  run_it.sh
tests/hipfft_complex_1d/: CMakeLists.txt  Makefile  build.sh  check_env.sh  hipfft_complex_1d.cpp  setUpModules.sh  submission_script.sh
tests/hipfft_complex_1d_batch/: Makefile  build.sh  hipfft_complex_1d_batch.cpp  run_it.sh  submission_script.sh
tests/hipfft_complex_3d/: Makefile  build.sh  hipfft_complex_3d.cpp  spectrum_analyzer.h  submission_script.sh
tests/hipfft_create/: CMakeLists.txt  hipfft_create.cpp
tests/hipfft_double_complex_1d/: Makefile  build.sh  hipfft_double_complex_1d.cpp  submission_script.sh
tests/hipfft_double_complex_1d_batch/: Makefile  build.sh  hipfft_double_complex_1d_batch.cpp  run_it.sh  submission_script.sh
tests/hipfft_double_complex_3d/: Makefile  build.sh  hipfft_double_complex_3d.cpp  run_it.sh  spectrum_analyzer.cpp  spectrum_analyzer.h  submission_script.sh
tests/hipfft_double_real_1d/: Makefile  build.sh  hipfft_double_real_1d.cpp  submission_script.sh
tests/hipfft_double_real_1d_batch/: Makefile  build.sh  hipfft_double_real_1d_batch.cpp  run_it.sh  submission_script.sh
tests/hipfft_double_real_3d/: Makefile  build.sh  hipfft_double_real_3d.cpp  run_it.sh  submission_script.sh
tests/hipfft_missing_symbols/: CMakeLists.txt  hipfft_missing_symbols.cpp
tests/hipfft_plan_destroy_cycle/: CMakeLists.txt  hipfft_plan_destroy_cycle.cpp
tests/hipfft_real_1d/: CMakeLists.txt  Makefile  build.sh  hipfft_real_1d.cpp  setUpModules.sh  submission_script.sh
tests/hipfft_real_1d_batch/: Makefile  build.sh  hipfft_real_1d_batch.cpp  run_it.sh  submission_script.sh
tests/hipfft_real_1d_stream/: Makefile  build.sh  hipfft_real_1d_stream.cpp  run_it.sh  submission_script.sh
tests/hipfft_real_3d/: Makefile  build.sh  hipfft_real_3d.cpp  spectrum_analyzer.cpp  submission_script.sh
